--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -433,7 +433,7 @@
 
                 <input type="hidden" name="next" value="{{ next }}">
 
-                <button type="submit" class="login-button animated delay-3">Sign in to Samo</button>
+                <button type="submit" class="login-button animated delay-3">Sign in to Samo Aziz</button>
             </form>
 
             <a href="https://t.me/Qodiraliyev_Azizbek" class="forgot-password animated delay-3">Contact for support</a>
