--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -389,7 +389,7 @@
         <div class="left-panel">
             <div class="logo animated">
                 <div class="logo-icon">S</div>
-                <div class="logo-text">Samo CRM</div>
+                <div class="logo-text">Samo CRM Aziz</div>
             </div>
 
             <h1 class="animated delay-1">Welcome to Samo Learning Center</h1>
@@ -433,7 +433,7 @@
 
                 <input type="hidden" name="next" value="{{ next }}">
 
-                <button type="submit" class="login-button animated delay-3">Sign in to Samo Azizbek</button>
+                <button type="submit" class="login-button animated delay-3">Sign in to Samo Aziz</button>
             </form>
 
             <a href="https://t.me/Qodiraliyev_Azizbek" class="forgot-password animated delay-3">Contact for support</a>
