--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -389,7 +389,7 @@
         <div class="left-panel">
             <div class="logo animated">
                 <div class="logo-icon">S</div>
-                <div class="logo-text">Samo CRM Aziz</div>
+                <div class="logo-text">Samo CRM Azizbek</div>
             </div>
 
             <h1 class="animated delay-1">Welcome to Samo Learning Center</h1>
