--- a/src/templates/admin/admin_dashboard.html
+++ b/src/templates/admin/admin_dashboard.html
@@ -509,7 +509,7 @@
     <aside class="sidebar">
         <div class="sidebar-header">
             <div class="sidebar-logo">S</div>
-            <div class="sidebar-title">Samo CRM Aziz</div>
+            <div class="sidebar-title">Samo CRM</div>
         </div>
 
         <div class="sidebar-menu">
